--- a/apCaminhosMarte/apCaminhosMarte.csproj
+++ b/apCaminhosMarte/apCaminhosMarte.csproj
@@ -48,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Arvore.cs" />
+    <Compile Include="Caminho.cs" />
     <Compile Include="Cidade.cs" />
     <Compile Include="FilaLista.cs" />
     <Compile Include="FilaVaziaException.cs" />
